--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@esbuild/win32-x64": "^0.18.11",
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.5",
         "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "datatables.net-dt": "^1.13.5"
     }
 }
