--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "laravelcollective/html": "^6.0",
+        "realrashid/sweet-alert": "^7.0",
         "smalot/pdfparser": "^2.5"
     },
     "require-dev": {
